# gchemol

./: .gitignore  .travis.yml  Cargo.toml  Changelog.md  README.md
core/: Cargo.toml
core/src/: data.rs  lattice.rs  lib.rs  neighbors.rs  topology.rs  trajectory.rs
core/src/molecule/: clean.rs  connect.rs  edit.rs  formula.rs  fragment.rs  mod.rs  order.rs  property.rs  rebond.rs  test.rs  view.rs
examples/: mol.in  template.rs  template_hbs.rs  xyz.hbs
gchemol/: Cargo.toml
gchemol/src/: lib.rs
gchemol/tests/: crystal.rs  files  geometry.rs  io.rs  molecule.rs
geometry/: Cargo.toml
geometry/src/: base.rs  interpolate.rs  lib.rs  random.rs  stats.rs  transform.rs
geometry/src/alignment/: mod.rs  qcprot.rs  quaternion.rs
geometry/tests/: geometry.rs
geometry/tests/files/alignment/: candidate-ro.mol2  candidate.mol2
parser/: Cargo.toml
parser/src/: lib.rs  xyz.rs
readwrite/: Cargo.toml
readwrite/src/: formats.rs  io.rs  lib.rs  nom_parser.rs  parser.rs  template.rs
readwrite/src/formats/: cif.rs  dftb.rs  gaussian.rs  gulp.rs  mod.rs  mol2.rs  mopac.rs  ms.rs  pdb.rs  sdf.rs  siesta.rs  vasp.rs  xyz.rs
readwrite/tests/files/cif/: MS-MOR.cif  babel.cif  quinone.cif
readwrite/tests/files/gaussian/: Test.FChk  test1044.com
readwrite/tests/files/mol2/: alanine-gv.mol2  alanine-pymol.mol2  ch3f-dos.mol2  multi-obabel.mol2
readwrite/tests/files/sdf/: dendrogram.sd  multi-babel.mol  thiadiazolyl.mol
readwrite/tests/files/templates/: mopac.hbs  xyz.hbs
readwrite/tests/files/xyz/: c2h4.pxyz  c2h4.xyz  multi.pxyz  multi.xyz  pbc.pxyz  pbc.xyz
src/: atom.rs  bond.rs  data.rs  element.rs  formats.rs  geometry.rs  graph.rs  io.rs  lattice.rs  lib.rs  molecule.rs  parser.rs  system.rs  topology.rs  trajectory.rs
src/data/: vdw.txt
src/formats/: cif.rs  dftb.rs  gaussian.rs  gulp.rs  mod.rs  mol2.rs  ms.rs  pdb.rs  sdf.rs  siesta.rs  template.rs  vasp.rs  xyz.rs
src/geometry/: base.rs  interpolate.rs  mod.rs  random.rs  transform.rs
src/geometry/alignment/: mod.rs  qcprot.rs  quaternion.rs
src/molecule/: clean.rs  edit.rs  formula.rs  fragment.rs  mod.rs  order.rs  property.rs  rebond.rs  test.rs  view.rs
tests/: crystal.rs  geometry.rs  io.rs  molecule.rs
tests/files/: alanine-gv.mol2  alanine-pymol.mol2
tests/files/alignment/: candidate.mol2  reference.mol2
tests/files/cif/: ccdc.cif
tests/files/dftb/: geo_end.gen
tests/files/gaussian/: test0769.com  test1036.com
tests/files/mol2/: LTL-crysin-ds.mol2  arginyl-ds.mol2  multi-ds.mol2
tests/files/plain-coords/: test.coord  tms.xyz
tests/files/templates/: dftbplus.hbs  gulp.hbs  xyz.hbs
tests/files/vasp/: CONTCAR  POSCAR
