# [[file:~/Workspace/Programming/gchemol/gchemol.note::c45d1413-12b8-471e-b060-da682339ad4b][c45d1413-12b8-471e-b060-da682339ad4b]]
[package]
name = "gchemol"
version = "0.0.20"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[workspace]
members = ["geometry", "core", "readwrite"]

[dependencies]
gchemol-geometry = {path = "geometry"}
gchemol-core = {path = "core"}
gchemol-readwrite = {path = "readwrite"}

[dev-dependencies]
approx = "0.3"
tempfile = "3"
# c45d1413-12b8-471e-b060-da682339ad4b ends here
