# cargo

# [[file:~/Workspace/Programming/gchemol/gchemol.note::*cargo][cargo:1]]
[package]
name = "gchemol"
version = "0.0.25"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[workspace]
members = ["geometry", "core", "readwrite"]

[dependencies]
nom = "4.1"
quicli = "*"
gchemol-geometry = {path = "geometry"}
gchemol-core = {path = "core"}
gchemol-readwrite = {path = "readwrite"}

[dev-dependencies]
approx = "0.3"
tempfile = "3"
# cargo:1 ends here
