# cargo

# [[file:~/Workspace/Programming/gchemol-rs/gchemol/core/gchemol-core.note::*cargo][cargo:1]]
[package]
name = "gchemol-core"
version = "0.0.31"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
nalgebra = "0.18"
petgraph = "0.4"
indexmap = {version="1.0", features=["serde-1"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
itertools = "0.8"
quicli = "0.4"
gchemol-geometry = {path = "../geometry"}

[dev-dependencies]
approx = "0.3"
# cargo:1 ends here
