# cargo

# [[file:~/Workspace/Programming/gchemol-rs/gchemol/core/gchemol-core.note::*cargo][cargo:1]]
[package]
name = "gchemol-core"
version = "0.0.36"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
vecfx = { git = "https://github.com/gchemol/vecfx.git", features = ["nalgebra"] }
petgraph = {version="0.4", features=["serde-1"]}
indexmap = {version="1.0", features=["serde-1"]}
serde = {version="1.0", features = ["derive"]}
envy = "0.4"
serde_json = "1.0"
itertools = "0.8"
quicli = "0.4"
gchemol-geometry = {path = "../geometry"}

[dev-dependencies]
approx = "0.3"
# cargo:1 ends here
