# cargo

# [[file:~/Workspace/Programming/gchemol-rs/gchemol/gchemol/gchemol.note::*cargo][cargo:1]]
[package]
name = "gchemol"
version = "0.0.34"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
gchemol-core = {version = "*", path = "../core"}
gchemol-geometry = {version = "*", path = "../geometry"}
gchemol-readwrite = {version = "*", path = "../readwrite"}

[dev-dependencies]
approx = "0.3"
tempfile = "3"
# cargo:1 ends here
