# cargo

# [[file:~/Workspace/Programming/gchemol/geometry/geometry.note::*cargo][cargo:1]]
[package]
name = "gchemol-geometry"
version = "0.0.27"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
nalgebra = "0.16"
quicli = "0.4"
libtest = "0.0.1"
rand = "=0.5"

[dev-dependencies]
approx = "0.3"
tempfile = "3"
timeit = "*"
gchemol = { path = ".." }
# cargo:1 ends here
