# cargo

# [[file:~/Workspace/Programming/gchemol-rs/gchemol/geometry/geometry.note::*cargo][cargo:1]]
[package]
name = "gchemol-geometry"
version = "0.0.33"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
nalgebra = {version="0.18", features=["serde-serialize"]}
quicli = "0.4"
libtest = "0.0.1"
rand = "=0.5"

[dev-dependencies]
approx = "0.3"
tempfile = "3"
timeit = "*"
gchemol = { path = "../gchemol" }
# cargo:1 ends here
