# cargo

# [[file:~/Workspace/Programming/gchemol-rs/gchemol/geometry/geometry.note::*cargo][cargo:1]]
[package]
name = "gchemol-geometry"
version = "0.0.35"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
vecfx = { git = "https://github.com/gchemol/vecfx.git", features = ["nalgebra"] }
guts = { git = "https://github.com/ybyygu/guts.git", branch="dev" }
rand = "=0.5"

[dev-dependencies]
approx = "0.3"
tempfile = "3"
timeit = "*"
gchemol = { path = "../gchemol" }
# cargo:1 ends here
