# cargo

# [[file:~/Workspace/Programming/gchemol/readwrite/readwrite.note::*cargo][cargo:1]]
[package]
name = "gchemol-readwrite"
version = "0.0.24"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
nom = ">=4.1.0"
handlebars = ">=1.0.0"
quicli = "0.3"
indexmap = "1.0"
itertools = "0.7"
gchemol-core = {path = "../core"}
serde = "*"
serde_json = "*"
serde_derive = "1.0"

[dev-dependencies]
approx = "0.3"
tempfile = "3"
# cargo:1 ends here
